Styled StatusDocMarkingconf page fixed alignements,rewrote css in tailwindCSS

--- a/client/src/components/screens/StatusDocumentMarkingConfiguration.css
+++ b/client/src/components/screens/StatusDocumentMarkingConfiguration.css
@@ -1,20 +1,260 @@
-.status-document-marking-conf-screen{
-    width: 100%;
-    height: 110rem;
+.studentTopicgroup-screen {
+    width: 150%;
+    height: 120rem;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #22272E;
-}
-.section-content{
-    height: 100px;
-    width: 100%;
 
-}
-.form-group{
+    @media (orientation: landscape) {
+      body {
+        flex-direction: row;
+      }
+    }
+    @media (orientation: portrait) {
+      body {
+        flex-direction: column;
+      }
+    }
+
+    @media (min-width: 600px) {
+      main {
+        flex-wrap: nowrap;
+      }
+  
+      div {
+        flex-basis: 33%;
+      }
+    }
+
+    /* @media screen and (orientation: portrait) {
+      #example {
+        width: 100%;
+      }
+    }
+    @media screen and (orientation: landscape) {
+      #example {
+        position: fixed;
+        width: 2.65em;
+        height: 100%;
+      }
+      p {
+        margin-left: 2em;
+      }
+      li + li {
+        margin-top: .5em;
+      }
+    } */
+  }
+  .group-screen__form {
+    width: 150%;
+    padding: 1.5rem;
+    margin-top: -100px;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    margin: 0 auto;
+    background: #161b22;
+    border-radius: 5px;
+    color: white;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #21262d;
+    height: 400rem;
+    align-items: center;
+  }
+  
+  .status-document-group-screenform {
+    width: 0px;
+    padding: 1.5rem;
+    margin-top: -330px;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    background: #161b22;
+    border-radius: 5px;
+    color: white;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #21262d;
+    height: 90rem;
+    
+    @media (orientation: landscape) {
+      body {
+        flex-direction: row;
+      }
+    }
+    @media (orientation: portrait) {
+      body {
+        flex-direction: column;
+      }
+    }
+
+    @media (min-width: 600px) {
+      main {
+        flex-wrap: nowrap;
+      }
+  
+      div {
+        flex-basis: 33%;
+      }
+    }
+  }
+  
+  .studentTopic-screen__title {
+    text-align: center;
+    margin-bottom: 1rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: xx-large;
+    color: #8256D0;
+    font-weight: bold;
+
+    @media (orientation: landscape) {
+      body {
+        flex-direction: row;
+      }
+    }
+    @media (orientation: portrait) {
+      body {
+        flex-direction: column;
+      }
+    }
+
+    @media (min-width: 600px) {
+      main {
+        flex-wrap: nowrap;
+      }
+  
+      div {
+        flex-basis: 33%;
+      }
+    }
+  }
+  
+  .login-screen__forgotpassword {
+    font-size: 0.7rem;
+    color: royalblue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  .login-screen__subtext {
+    font-size: 0.7rem;
+    display: block;
+    margin: 0.5rem 0;
+    font-weight: bold;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-.input{
+  .input{
+    border-radius: 5px;
+    @media (orientation: landscape) {
+      body {
+        flex-direction: row;
+      }
+    }
+    @media (orientation: portrait) {
+      body {
+        flex-direction: column;
+      }
+    }
+
+    @media (min-width: 600px) {
+      main {
+        flex-wrap: nowrap;
+      }
+  
+      div {
+        flex-basis: 33%;
+      }
+    }
+  }
+  
+  #LogButton{
+    background-color: #8256D0;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .form-group{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  #EmailID{
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  #PasswordID{
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
-}
+  }
+  
+  #Regs{
+    color: royalblue;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  #email{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-radius: 5px;
+  }
+  
+  #password{
+    border-radius: 5px;
+  }
+  
+  #card{
+    border-width: 2px;
+    border-style: solid;
+    border-color: #464b53;
+    width: 60%;
+    height: 33vh;
+    margin: 0 auto;
+    border-radius: 10px;
+  }
+
+  #studentTopiccaption{
+    font-size:xx-large;
+    margin: 0 auto;
+    color: royalblue;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: xx-large;
+    font-weight: bolder;
+  }
+
+  #hr{
+    border-color: #464b53;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+
+  #List{
+    margin-top: 20px;
+    color: #fff;
+    padding-bottom: 20px;
+  }
+
+  #Log1Button{
+    background-color: #8256D0;
+    width: 175px;
+    margin-top: 26px;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .editor{
+    color:black;
+  }
+
+  .TopicNames{
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: large;
+  }
+
+  
+
+  
